--- a/customer/templates/customer/customer_signup.html
+++ b/customer/templates/customer/customer_signup.html
@@ -41,7 +41,7 @@
         <div class="form-row">
           <div class="col form-group">
             <label>First name</label>
-            <input type="text" name="fname" class="form-control" placeholder="">
+            <input type="text" name="fname" class="form-control" placeholder="enter first name">
           </div> <!-- form-group end.// -->
           <div class="col form-group">
             <label>Last name</label>
@@ -83,7 +83,7 @@
         </div> <!-- form-group// -->
 
       </form>
-      {{ message }}
+      {{ msg }}
     </article><!-- card-body.// -->
   </div> <!-- card .// -->
   <p class="text-center mt-4">Have an account? <a href="{% url 'customer:customer_login' %}">Log In</a></p>
