--- a/seller/templates/seller/base.html
+++ b/seller/templates/seller/base.html
@@ -68,6 +68,9 @@ $(document).ready(function() {
         font-size: 30px;
         margin: 5px;
     }
+    .rating-star{
+        color: yellow;
+    }
     </style>
 
 </head>
