--- a/seller/templates/seller/includes/sidebar.html
+++ b/seller/templates/seller/includes/sidebar.html
@@ -7,7 +7,9 @@
         <a class="list-group-item" href="{% url 'Seller:profile' %}"> Profile </a>
         <a class="list-group-item" href="{% url 'Seller:change_password' %}"> Change Password </a>
 
-        <a class="list-group-item" href="{% url 'Seller:recent_orders' %}"> My orders </a>
+        <a class="list-group-item" href="{% url 'Seller:recent_orders' %}"> Pending orders </a>
+        <a class="list-group-item" href="{% url 'Seller:order_history' %}"> Order History</a>
+
  
     </ul>
     <br>
