--- a/seller/templates/seller/order_history.html
+++ b/seller/templates/seller/order_history.html
@@ -4,15 +4,14 @@
 {% block content %}
 
 <main class="col-md-9">
-   <h3 class=" text-center ">Recent Orders  </h3>
+   <h3 class=" text-center ">Order History  </h3>
 
 
-   {% if items %}
+   {% if orders %}
    <table class = "table table-hover mt-3">
       <tr>
          <th>Sl No</th>
          <th>Order No</th>
-
          <th>Product</th>
         <th>Quantity</th>
          <th>Price</th>
@@ -21,7 +20,7 @@
          
       </tr>
 
-      {% for item in items %}
+      {% for item in orders %}
 
       <form action="" method="POST">
          {% csrf_token %}
@@ -63,6 +62,7 @@
       {% endfor %}
    </table>
 
+   
    {% else %}
 
    <div class="d-flex justify-content-center my-5">
